--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -20,8 +20,6 @@
   text-decoration: none;
 }
 
-
-
 .avatar-slide {
   --border-radius: 0px;
 }
@@ -29,61 +27,72 @@
 .title-slide {
   font-family: 'Nunito', sans-serif;
   color: rgb(56, 115, 115);
-  margin: 10px 0; /* Añadido para ajustar el espacio entre el título y la imagen */
+  margin: 10px 0;
+  font-weight: bold;
 }
 
 .p-slide {
   font-family: 'Nunito', sans-serif;
   color: #2068f6;
-  margin-bottom: 10px; 
-  
+  margin-bottom: 20px; 
 }
 
 .p-swipe {
   font-family: 'Nunito', sans-serif;
+  font-size: 14px;
   color: rgb(151, 166, 160);
   border: 2px solid rgb(177, 186, 182);
   border-radius: 10px;
-  margin-top: 10px; 
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  overflow: hidden;
 }
+
 swiper-container {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  background-color:#ffffff;
+  min-width: 400px;
+  background-color: #ffffff;
+  overflow: hidden;
 }
 
-/* Estilo para los slides */
 swiper-slide {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  width: auto;
   background-color: #ffffff;
-  border: 4px solid #232d45; /* Tamaño del borde reducido a 4px */
+  position: relative; 
+  border: 4px solid #232d45;
   border-radius: 20px;
-  box-sizing: border-box; /* Hace que el tamaño total incluya el borde y el relleno */
-  padding: 16px;
+  overflow: hidden;
 }
 
-/* Ajustes para el contenedor de cada slide */
 .dv-slide {
   text-align: center;
   justify-content: center;
-  max-width: 90%; /* Ajusta el ancho máximo según tus preferencias */
-  margin: 0 auto; /* Centra el contenedor horizontalmente */
-/* Añade relleno alrededor del contenido */
-
+  max-width: 80vw;
+  width: 70%;
+  margin: 0 auto;
+  overflow: hidden;
+  box-sizing: border-box;
+ 
+  position: relative;
+}
+.slide-content {
+  margin-bottom: 20px; 
+  overflow: hidden;
 }
 
-/* Ajustes para la imagen dentro del contenedor del slide */
 .dv-slide img {
-  width: 100%;
+  width: 40%;
   height: auto;
-  max-height: 50vh; /* Ajusta la altura máxima según tus preferencias */
-  margin-bottom: 20px; /* Añade un espacio entre la imagen y los textos */
+  max-height: 50vh;
+  margin-bottom: 20px;
+  overflow: hidden;
 }
