--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -12,8 +12,7 @@
                 <h1 class="title-slide">{{slide.title}}</h1>
                 <p class="p-slide">{{slide.description}}</p>
             </div>
-            <p class="p-swipe">Swipe para continuar</p>
-            <ion-button (click)="goToIntro()"> hola soy un boton</ion-button>
+            <ion-button (click)="goToIntro()" fill="outline" size="small"> Click para omitir</ion-button>
         </div>
     </swiper-slide>
 </swiper-container>
