--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital@1&family=Nunito&family=Rubik+Burned&display=swap');
 .container {
   text-align: center;
+  justify-content: center;
+  max-width: 80vw;
+  width: 70%;
+  margin: 0 auto;
+  overflow: hidden;
+  box-sizing: border-box;
+  position: relative;
 }
 
 #container strong {
@@ -18,13 +25,33 @@
 #container a {
   text-decoration: none;
 }
+
+ion-content{
+  --background: #fff;
+  --color: black;
+}
+ion-toolbar{
+  --background: #fff;
+  --color: black;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  --font-family: 'Nunito', sans-serif;
+}
 swiper-slide {
   align-items: center;
   justify-content: center;
   display: flex;
   width: 100%;
 }
-
+swiper-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  overflow: hidden;
+}
 
 swiper-slide img {
   width: 100%;
