--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,11 +5,25 @@
   </ion-header>
 <ion-content [fullscreen]="true">
     <div id="container">
-        <swiper-container [loop]="true" navigation="true">
-            <swiper-slide *ngFor="let img of swiper_images" (click)="goToIntro()">
-                    <img [src]="img" />
-            </swiper-slide>
-        </swiper-container>
+      <swiper-container [loop]="true" navigation="true"
+      [autoplay]="{ delay: 3000, pauseOnMouseEnter: true }"
+      [grabCursor]="true"
+      [centeredSlider]="true"
+      [slidesPerView]="3"
+      [effect]="'coverflow'"
+      [coverflowEffect]="{
+        rotate: 50,
+        stretch: 0,
+        depth: 100,
+        modifier: 1,
+        speed: 80,
+        slideShadows: true
+      }">
+      <swiper-slide *ngFor="let item of swiper_items" (click)="goToIntro()" [style.background-color]="item.color">
+        <img [src]="item.img" />
+        <!-- Puedes agregar más contenido según sea necesario -->
+      </swiper-slide>
+    </swiper-container>
         <ion-button (click)="goToIntro()">Ver Intro</ion-button>
     </div>
 
