register page, auth service, login guard

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,7 +24,8 @@
         <!-- Puedes agregar más contenido según sea necesario -->
       </swiper-slide>
     </swiper-container>
-        <ion-button (click)="goToIntro()">Ver Intro</ion-button>
+    <div class="hola"><ion-button (click)="goToIntro()">Ver Intro</ion-button></div>
+        
     </div>
 
 </ion-content>
