--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -3,39 +3,45 @@
     <ion-title class="ion-text-center ion-text-uppercase">login</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<!-- creas campo password y validaciones en pantalla-->
 <ion-content>
-  <figure class="ion-text-center">
-    <ion-avatar class="center-avatar">
-      <img src="../../assets/icon/favicon.png" alt="logo" class="logo">
-    </ion-avatar>
-  </figure>
-  <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
-    <ion-item>
-      <ion-input [clearInput]="true"  label="Email" labelPlacement="floating" placeholder="Email" formControlName="email"></ion-input>
-      <ion-input label="Contraseña" labelPlacement="floating" type="password" placeholder="Contraseña" formControlName="password"></ion-input>
-    </ion-item>
-    <div class="validation_messages">
-      <ng-container *ngFor="let campos of ['email', 'password']">
-        <ng-container *ngFor="let validation of validation_messages[campos]">
-          <div *ngIf="
-            (loginForm.get(campos)?.hasError(validation.type) && 
-            loginForm.get(campos)?.dirty)
-          ">
-            {{validation.message}}
-          </div>
-        </ng-container>
-      </ng-container>
-    </div>
-    
-    <div class="ion-text-center">
-      <ion-button class = "center-button" type="submit" [disabled]="!loginForm.valid">login</ion-button>
-    </div>
-  </form>
-  <div class="ion-text-center">
-    <ion-button (click)="goToRegister()" fill="clear" size="small" class="center-button"> ¿Aún no tienes una cuenta?</ion-button>
-  </div>
-  <div class="validation_messages">
-    {{loginMessage}}
+  <div class="login-container">
+    <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)" class="login-form"
+    >
+      <figure class="ion-text-center">
+        <ion-avatar class="center-avatar">
+          <img src="../../assets/icon/favicon.png" alt="logo" class="logo" />
+        </ion-avatar>
+      </figure>
+      <div class="ion-text-center">
+        <div class="validation_messages">{{loginMessage}}</div>
+      </div>
+      <ion-item>
+        <ion-input [clearInput]="true" label="Email" labelPlacement="floating" placeholder="Email" formControlName="email"
+        ></ion-input>
+        <ion-input label="Contraseña" labelPlacement="floating" type="password" placeholder="Contraseña" formControlName="password"
+        ></ion-input>
+        <div class="validation_messages">
+          <ng-container *ngFor="let campos of ['email', 'password']">
+            <ng-container
+              *ngFor="let validation of validation_messages[campos]"
+            >
+              <div
+                *ngIf="(loginForm.get(campos)?.hasError(validation.type) && 
+            loginForm.get(campos)?.dirty)">
+                {{validation.message}}
+              </div>
+            </ng-container>
+          </ng-container>
+        </div>
+      </ion-item>
+      <div class="ion-text-center">
+        <ion-button class="center-button login-button" type="submit" [disabled]="!loginForm.valid">login</ion-button>
+      </div>
+      <!-- Agregar boton para llevar a pagina de registro-->
+      <div class="ion-text-center">
+        <ion-button (click)="goToRegister()" fill="clear" size="small" class="center-button register-button">¿Aún no tienes una cuenta?</ion-button>
+      </div>
+    </form>
   </div>
 </ion-content>
