--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -66,8 +66,9 @@ ion-button {
 }
 
 .validation_messages {
-  color: #f52c2c;
+  color: #b32424;
   background: rgba(95, 87, 87, 0.792);
+  
 }
 .ion-text-center a {
   display: block;
