Servicio Api Eventos y Menu

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,7 +24,7 @@
         speed: 80,
         slideShadows: true
       }">
-       <swiper-slide *ngFor="let item of event_list">
+       <swiper-slide *ngFor="let item of local_events">
         <img src="{{item.image}}">
       </swiper-slide>
     </swiper-container>
