--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="light">
     <ion-title class="ion-text-center ion-text-uppercase">login</ion-title>
   </ion-toolbar>
 </ion-header>
